simple8b.inl has an invalid anonymous namespace

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-10-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      simple8b.inl is a header which defines things which are used in other inline functions, so the anonymous namespace results in ODR violations (and is in violation of our coding style). This was probably missed when these were being cleaned up due to it being a .inl file rather than .h.

            Assignee:
            Thomas Goyne
            Reporter:
            Thomas Goyne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: