SERVER-112018 Remove an invalid anonymous namespace from simple8b.inl (#42249)

GitOrigin-RevId: e17675891f12b741feeee8a53ccb26e405f4b266